tenant/instructor-dashboard/templates/blackbox_exporter/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  labels:
    app.kubernetes.io/name: blackbox-exporter-service
    app.kubernetes.io/component: blackbox-exporter
    app.kubernetes.io/part-of: instructor-dashboard
spec:
  ports:
  - port: 9115
    targetPort: 9115
    protocol: TCP
  selector:
    app.kubernetes.io/name: blackbox-exporter-deployment
