tenant/instructor-dashboard/templates/blackbox_exporter/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: blackbox-exporter
  labels:
    app.kubernetes.io/name: blackbox-exporter-route
    app.kubernetes.io/component: blackbox-exporter
    app.kubernetes.io/part-of: instructor-dashboard
spec:
  to:
    kind: Service
    name: blackbox-exporter
  port:
    targetPort: 9115
